; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regproc.c_convertHexToDWord.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/regdump/extr_regproc.c_convertHexToDWord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%08lx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @convertHexToDWord(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [9 x i32], align 16
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = getelementptr inbounds [9 x i32], [9 x i32]* %6, i64 0, i64 0
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @memcpy(i32* %7, i32* %8, i32 32)
  %10 = getelementptr inbounds [9 x i32], [9 x i32]* %6, i64 0, i64 352
  store i32 0, i32* %10, align 16
  %11 = getelementptr inbounds [9 x i32], [9 x i32]* %6, i64 0, i64 0
  %12 = call i32 @_T(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @_stscanf(i32* %11, i32 %12, i32* %5)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @memcpy(i32* %14, i32* %5, i32 4)
  ret i32 4
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @_stscanf(i32*, i32, i32*) #1

declare dso_local i32 @_T(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
